# BC5KeyGen_GUI

./: .gitmodules  CMakeLists.txt  README.md  base58.c  libbase58.h  lic_manager.cpp  lic_manager.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  patcher.cpp  patcher.h  resources.qrc
icons/: app_icon.icns
